--- a/单一按钮显示隐藏.html
+++ b/单一按钮显示隐藏.html
@@ -10,7 +10,7 @@
     <div>
         <div class="top">
             <p>播放列表...</p>
-            <span></span>
+            <span>1</span>
         </div>
         <ul>
             <li>1</li>
