--- a/typeof.html
+++ b/typeof.html
@@ -10,7 +10,7 @@
     <p>alear(typeof 123) //number</p>
     <p>alear(typeof '1230')//string</p>
     <p>alear(typeof true)//boolean</p>
-    <p>111</p>
+    <p>dev</p>
 </body>
 </html>
 <script>
